--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/underscore/underscore-min.js"></script>
     <!-- your scripts -->
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
@@ -14,7 +15,12 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
+      <form>
+        <input type="text" placeholder='Message here!' id="chatbox" autofocus />
+        <input type="submit" value="Submit" id="submit">
+      </form>
       <!-- Your HTML goes here! -->
+      <div class="chat"></div>
     </div>
   </body>
 </html>
