added rooms object

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,11 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
+      <button>Change Room</button>
+      <!--<form id="usernameset">
+        <input type="text" placeholder='Message here!' id="chatbox" autofocus />
+        <input type="submit" value="Submit" id="submit">
+      </form>-->
       <form>
         <input type="text" placeholder='Message here!' id="chatbox" autofocus />
         <input type="submit" value="Submit" id="submit">
