finished all basic requirements

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
       </form>-->
       <form>
         <input type="text" placeholder='Message here!' id="chatbox" autofocus />
-        <input type="submit" value="Submit" id="submit">
+        <input type="submit" value="Submit" class="submit">
       </form>
       <!-- Your HTML goes here! -->
       <div id="chats"></div>
